core/src/main/web/app/styles/cell-outputs.scss
/*
 *  Copyright 2014 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

bk-code-cell-output {
  .toggle-menu.bkr {
    right: $grid-gutter-width - 1px;
  }

  .ui-state-default {
    background: rgb(235, 235, 235);
  }
}

.advanced-mode bk-output-display.bkr {
  min-height: 20px;
}

.markup, .dataTables_scrollBody {
  box-sizing: content-box;
}

.markup {
  min-height: $line-height-base + 0em;
  & > :first-child {
    margin-top: 0;
  }

  & > :last-child {
    margin-bottom: 0;
  }

  ul, ol {
    margin-left: $grid-gutter-width;
  }

  .bk-section-title & {
    min-height: 1em;
  }

  p:before {
    content: ' ';
    display: block;
    float: right;
    height: 10px;
    width: 79px;
  }
}

.modal.output-table-options {
  .row {
    margin-bottom: 20px;
  }

  h2 {
    margin: 0;
  }
}

